cabal-version: 2.4

name: repld
version: 0

common component
  build-depends:
    base ^>= 4.14 || ^>= 4.15 || ^>= 4.16,
  default-extensions:
    BlockArguments
    DefaultSignatures
    DeriveFunctor
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    ViewPatterns
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: component
  build-depends:
    aeson ^>= 2.1,
    bytestring ^>= 0.11,
    directory ^>= 1.3,
    filepath ^>= 1.4,
    haskeline ^>= 0.8,
    ki ^>= 1.0,
    network ^>= 3.1,
    process ^>= 1.6.15,
    safe-exceptions ^>= 0.1,
    text ^>= 2.0,
  exposed-modules:
    Repld.App
    Repld.Main
    Repld.Prelude
    Repld.Server
    Repld.Socket
  hs-source-dirs: src

executable repld
  import: component
  build-depends: repld
  ghc-options: -O -threaded
  hs-source-dirs: app/repld
  main-is: Main.hs

executable repld-send
  import: component
  build-depends: repld
  ghc-options: -O
  hs-source-dirs: app/repld-send
  main-is: Main.hs
