cabal-version: 2.4

name: repld
version: 0

common component
  build-depends:
    base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19,
  default-extensions:
    BlockArguments
    DefaultSignatures
    DerivingStrategies
    LambdaCase
    OverloadedStrings
  default-language: GHC2021
  ghc-options: -Wall

library
  import: component
  build-depends:
    bytestring ^>= 0.11,
    cretheus,
    directory ^>= 1.3,
    filepath ^>= 1.4,
    haskeline ^>= 0.8,
    ki ^>= 1.0,
    network ^>= 3.1,
    process ^>= 1.6.15,
    safe-exceptions ^>= 0.1,
    text ^>= 2.0 || ^>= 2.1,
  exposed-modules:
    Repld.App
    Repld.Main
    Repld.Prelude
    Repld.Server
    Repld.Socket
  hs-source-dirs: src

executable repld
  import: component
  build-depends: repld
  ghc-options: -O -threaded
  hs-source-dirs: app/repld
  main-is: Main.hs

executable repld-send
  import: component
  build-depends: repld
  ghc-options: -O
  hs-source-dirs: app/repld-send
  main-is: Main.hs
